fix IE scrollbar issue (also in would display scrollbar in OSes other than OS X)

--- a/app/styles/components/layered_navigation/_layer.scss
+++ b/app/styles/components/layered_navigation/_layer.scss
@@ -46,7 +46,7 @@
     background-color: #FFF;
     height: 100vh;
     height: calc(100vh - 48px);
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   .layer-content {
